--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Open+Sans&display=swap" rel="stylesheet">
 
+    <script src="https://kit.fontawesome.com/f9a485fee8.js" crossorigin="anonymous"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169769238-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
